[gd_scene load_steps=23 format=2]

[ext_resource path="res://World/TimeStopShader.tres" type="Shader" id=1]
[ext_resource path="res://Enemies/EnemySword.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/enemies/goblin/goblin_run_spritesheet.png" type="Texture" id=3]
[ext_resource path="res://Art/enemies/goblin/goblin_idle_spritesheet.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Goblin.gd" type="Script" id=5]

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 1 )
shader_param/timeStop = false
shader_param/world = false

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=15]
radius = 121.0

[sub_resource type="CircleShape2D" id=16]
radius = 7.07107

[sub_resource type="CircleShape2D" id=17]

[node name="EnemyWthSword" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 13 )
z_index = 1
frames = SubResource( 30 )
animation = "Run"
frame = 1
playing = true

[node name="PlayerDetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
visible = false
shape = SubResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 1 )
shape = SubResource( 16 )

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 17 )

[node name="SwordPivot" type="Position2D" parent="."]

[node name="EnemySword" parent="SwordPivot" instance=ExtResource( 2 )]
position = Vector2( 3, 0 )

[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]
[connection signal="body_exited" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
